# anon-notes

./: Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml
.github/workflows/: backend-check.yml  frontend-check.yml
backend/: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  app.py  config.py  docker-compose.yml  pyproject.toml  setup.cfg
backend/bash/: crypto.sh
backend/src/: app.py  config.py  worker.py
backend/src/api/v1/: __init__.py  note.py
backend/src/core/: config.py  db.py  exceptions.py  logger.py
backend/src/crud/: base.py  note.py
backend/src/enums/: db.py  note.py
backend/src/model/: note.py
backend/src/models/: __init__.py  base.py  comments.py  note.py  notes.py
backend/src/routers/: __init__.py  comments.py  notes.py
backend/src/schemas/: note.py
backend/src/service/: crypto.py
backend/src/service/jobs/: __init__.py  delete_note.py
backend/src/services/: note.py
backend/src/services/note/: note_destroyer.py  note_service.py
backend/src/setup/: __init__.py  database.py  logging.py  loguru_logging.py
backend/src/tests/crypto/: crypto_test.py
backend/src/tests/routers/: comments_test.py  conftest.py  notes_test.py
backend/src/utils/: database.py
backend/tests/: conftest.py  crypto_test.py
backend/tests/integrations/: conftest.py  test_note_endpoints.py
backend/tests/unit/: test_base_and_note_crud.py
docs/: backend_architecture.md  design.md  frontend_architecture.md  makefile.md  technical_specifications.md
frontend/: .env  .env.example  .gitignore  Dockerfile  Dockerfile.dev  index.html
frontend/app/: index.html  package-lock.json  package.json  vite.config.prod.ts  vite.config.ts
frontend/app/src/: App.tsx
frontend/app/src/assets/: index.css
frontend/app/src/assets/styles/: MainView.css  index.css
frontend/app/src/components/Image/: Image.tsx
frontend/app/src/config/: api.ts
frontend/app/src/constants/: timerSelection.tsx
frontend/app/src/router/: index.ts
frontend/app/src/services/: apiClient.ts  cryptoService.ts  index.ts  noteService.ts
frontend/app/src/types/: common.ts  imageCoord.ts  index.ts  note.ts
frontend/app/src/utils/: calculateNoteImages.ts  logger.ts
frontend/app/src/views/: MainView.tsx  NoteView.module.css  NoteView.tsx  Undefined.module.css  Undefined.tsx
nginx/: nginx.dev.conf  nginx.prod.conf
(+24 files in other folders)
