[tool.poetry]
name = "notes"
version = "0.1.0"
description = ""
authors = ["kematin <kematin@inbox.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
pydantic = "^2.10.4"
pydantic-settings = "^2.7.0"
loguru = "^0.7.3"
beanie = "^1.28.0"
cryptography = "^44.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
