[project]
name = "notes"
version = "0.1.0"
description = ""
requires-python = "==3.13.2"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn>=0.34.0",
    "pydantic>=2.10.4",
    "pydantic-settings>=2.7.0",
    "loguru>=0.7.3",
    "beanie>=1.28.0",
    "cryptography>=44.0.0",
    "celery>=5.4.0",
    "redis>=5.2.1",
    "motor>=3.7.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pre-commit>=4.0.1",
    "httpx>=0.28.1",
    "pytest-asyncio>=0.25.2",
    "ruff>=0.15.7",
    "mypy>=1.19.1",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
pythonpath = ["."]

[tool.coverage.run]
omit = [
    "src/core/*",
    "src/models/*",
    "src/schemas/*",
    "src/enums/*",
    "src/app.py",
]

[tool.ruff]
line-length = 89
indent-width = 4

[tool.mypy]
mypy_path = "backend"
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "src.core.config"
disable_error_code = ["call-arg"]

[[tool.mypy.overrides]]
module = "src.core.db"
disable_error_code = ["arg-type"]

[[tool.mypy.overrides]]
module = "src.models.*"
disable_error_code = ["assignment"]
